update build script and code